versions/26.2/translated/zh_cn/develop/items/potions.md
---
title: 药水
description: 学习如何加入多种生物效果的自定义药水。
authors:
  - cassiancc
  - dicedpixels
  - Drakonkinst
  - JaaiDead
  - PandoricaVi
---

药水是能为实体提供效果的消耗品。 玩家可以使用酿造台酿造药水，或者从其他游戏机制中以物品形式获取。

## 自定义药水{#custom-potions}

和物品和方块一样，药水需要注册。

## 准备你的药水 ID 类 {#preparing-your-potion-id-class}

如果你已经完成了[创建你的第一个物品](../items/first-item)页面，那么这个过程对你来说会非常熟悉——你需要创建类来保存你的 `Potion` 的标识符，这些标识符存储为 `ResourceKey`。

这些对药水的引用用于[生成药水标签的数据](../data-generation/tags)。

你可以将此方法放在一个名为 `ModPotionIds` 的类中（或者你想给类起什么名字都行）。

::: tip

Mojang对药水也是这么做的！ 参考 `PotionIds` 类来获取灵感。

:::

<<< @/reference/26.2/src/main/java/com/example/docs/potion/ModPotionIds.java#mod_potion_ids_class

### 创建物品{#creating-the-potion}

让我们从声明一个用于储存你的 `Potion` 实例的字段开始。 我们将直接使用 `ModInitializer`——实现这个类来持有这个字段。 注意使用了 `Registry.registerForHolder`，就像生物效果一样，许多使用药水的原版方法都优先使用这些作为 holder。

<<< @/reference/26.2/src/main/java/com/example/docs/potion/ExampleModPotions.java#register_potion

我们传入一个 `MobEffectInstance` 实例，它的构造方法接收以下 3 个参数：

- `Holder<MobEffect> effect` - 效果，表现为一个 holder。 我们在这里使用我们的自定义效果。 你也可以通过原版的 `MobEffects` 类访问原版效果。
- `int duration` - 状态效果的持续时间（以刻计算）。
- `int amplifier` - 状态效果的增幅。 比如 急迫 II 的增幅是 1。

::: info

要创建自己的药水效果，请使用[效果](../entities/effects)指南。

:::

### 注册药水 {#registering-the-potion}

在我们的初始化器中，我们将使用 `FabricBrewingRecipeRegistryBuilder.BUILD` 事件，使用 `BrewingRecipeRegistry.registerPotionRecipe` 方法注册我们的药水。

<<< @/reference/26.2/src/main/java/com/example/docs/potion/ExampleModPotions.java#register_recipes

`addMix` 接收以下 3 个参数：

- `Holder<Potion> from` - 初始药水，表现为一个 holder。 通常可以是水瓶或粗制的药水。
- `Item item` - 作为药水主要原料的物品。
- `Holder<Potion> to` - 结果药水，表现为一个 holder。

注册完成后，你就可以用马铃薯酿造土豆药水。

![玩家物品栏内的效果](/assets/develop/tater-potion.png)
